<resources>
    <string name="app_name">Inventory</string>
    <string name="title_activity_info_product">Info Product</string>
    <string name="title_activity_add_product">Add Product</string>
    <string name="title_activity_edit_product">Edit Product</string>

    <string name="hint_book_name">Name</string>
    <string name="hint_book_price">Price</string>
    <string name="hint_book_quantity">Quantity</string>
    <string name="hint_book_supplier">Supplier</string>
    <string name="hint_book_supplier_phone">Supplier Phone</string>

    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>

    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="cancel">Cancel</string>
    <string name="sale">Sale</string>
    <string name="add">Add Stock</string>
    <string name="contact_seller">Contact Seller</string>

    <!-- Empty Activity String -->
    <string name="empty_add_new_product">Add a product to your stock</string>
    <string name="empty_info_add_new_product">Click the + button to add a new product</string>

    <string name="info_cannot_sell">You cannot sell more product that you do not have</string>

    <!-- Editor Activity Toast Messages -->
    <string name="editor_update_product_failed">Error updating Product</string>
    <string name="editor_update_product_successful">Product saved</string>
    <string name="editor_insert_product_successful">Product saved</string>
    <string name="editor_insert_product_failed">Error with saving product</string>
    <string name="editor_catch_error">Something wrong, please re-enter</string>

</resources>
